--- a/lib/UI Helper.css
+++ b/lib/UI Helper.css
@@ -17,10 +17,10 @@ button.UI-link {
 .UI-contextMenu-submenu-list, .UI-contextMenu {
     -webkit-box-shadow: dimgray 0px 1px 5px; /*! 1px 1px 4px */
 
-    padding: 2px 2px; /* 2px 2px */
+    padding: 2px 2px; 
 
     background-color: white;
-    border: 1px solid dimgray; /*dimgray #aaaaaa*/
+    border: 1px solid dimgray; 
 
     list-style: none;
     cursor: default;
@@ -34,22 +34,16 @@ button.UI-link {
     overflow-x: hidden;
     overflow-y: scroll;
 
-    /*background-color: transparent;*/
 }
 
 .UI-contextMenu {
     position: absolute;
     top: 100%;
     margin-left: -2px;
-    /*margin-top: 13px;*/
     margin-top: -5px;
 
     font: menu;
     font-size: 13px;
-    /*font-variant: small-caps;
-    text-transform: capitalize;
-    text-align: right;
-    letter-spacing: 1px;*/
 
     text-shadow: none;
 
@@ -60,7 +54,7 @@ button.UI-link {
 .UI-contextMenu-separator {
     border: none;
     border-top: 1px solid #dcdcdc; /*! #acacac */
-    margin: 3px 4px; /* 3px -1px */
+    margin: 3px 4px; 
 }
 
 .UI-contextMenu-item {
@@ -69,8 +63,7 @@ button.UI-link {
 
 .UI-contextMenu-item,
 .UI-contextMenu-submenu {
-    padding: 1px 6px 2px; /* 1px 6px 2px */
-    /* margin: -1px; */
+    padding: 1px 6px 2px; 
     border: 1px solid transparent;
     color: black;
 }
@@ -85,44 +78,27 @@ button.UI-link {
 .UI-contextMenu-item[data-disabled],
 .UI-contextMenu-submenu[data-disabled] {
     opacity: 0.33333333;
-    /*color: #aaaaaa;*/
     cursor: default;
 }
 
 .UI-contextMenu-submenu {
     position: relative;
     margin: 0px -3px;
-    /*margin-right: -3px;*/
     padding-left: 9px;
     padding-right: 9px;
 
-    /*background-image: url(/images/context-menu-arrow.png);
-    background-repeat: no-repeat;
-    background-position: 95% center;*/
 
     outline: none !important;
 }
 
 .UI-contextMenu-arrow {
-    /*display: inline-block;*/
     float: right;
-    /*width: 5px;
-    height: 7px;*/
     margin-left: 4px;
     margin-top: 5px;
     margin-right: -4px;
-    /*background-image: url(/images/context-menu-arrow.png);
-    background-repeat: no-repeat;
-    background-position: 95% center;*/
 }
 
-/*.UI-contextMenu-submenu, .UI-contextMenu-submenu-padding, .UI-contextMenu-submenu-mask {
-    outline: 1px solid red;
-}*/
 
-/*.UI-contextMenu-submenu:not([data-selected]) .UI-contextMenu-submenu-padding {
-    height: 0px;
-}*/
 
 .UI-contextMenu-submenu-padding {
     -webkit-box-sizing: border-box;
@@ -140,32 +116,16 @@ button.UI-link {
 .UI-contextMenu-submenu-padding[data-overflow-x] {
     left: auto;
     right: 100%;
-    /*padding-left: 20px;
-    padding-right: 12px;*/
     margin-right: -21px;
-    /*padding-right: 7px;*/
 }
-/*.UI-contextMenu-submenu-padding[data-overflow-y] {
-    top: auto;
-    bottom: 0px;
-    margin-bottom: -12px;
-}*/
 
-/*.UI-contextMenu-submenu-list {
-    margin-left: 1px;
-    margin-top: -4px;
-}*/
 
 .UI-contextMenu-submenu-mask {
-    /*-webkit-transform-origin: 0% 100%;
-    -webkit-transform: rotate(4.5deg);*/
-    /*-webkit-mask-box-image: url(/images/context-menu-mask.png);*/
 
     position: absolute;
     z-index: 1;
     left: 0px;
     top: 0px;
-    /*border-bottom-left-radius: 100%;*/
 
     width: 100%;
     height: 100%;
@@ -174,26 +134,6 @@ button.UI-link {
     margin-top: -12px;
     margin-left: -12px;
 }
-/*.UI-contextMenu-submenu-mask[data-overflow-x] {
-    -webkit-transform-origin: 100% 100%;
-    -webkit-transform: rotate(-4.4deg);
-}
-.UI-contextMenu-submenu-mask[data-overflow-y] {
-    -webkit-transform-origin: 0% 0%;
-    -webkit-transform: rotate(-6deg);
-}
-.UI-contextMenu-submenu-mask[data-overflow-x][data-overflow-y] {
-    -webkit-transform-origin: 100% 0%;
-    -webkit-transform: rotate(6deg);
-}*/
-/*.UI-contextMenu-submenu-mask.num2 {
-    -webkit-transform: rotate(-20deg);
-
-    top: 100%;
-    width: 13px;
-
-    height: 200%;
-}*/
 
 .UI-contextMenu-submenu-list,
 .UI-contextMenu-submenu-mask,
@@ -218,10 +158,8 @@ button.UI-link {
     z-index: 9001;
 
     width: 20px;
-    /*height: 426px;*/
     height: 100%;
 
-    /*background-color: green;*/
 }
 .UI-scrollBar-marker {
     position: absolute;
@@ -233,11 +171,9 @@ button.UI-link {
 }
 .UI-scrollBar-track {
     position: absolute;
-    /*top: 50%;*/
 
     width: 100%;
     height: 100px;
-    /*margin-top: -25px;*/
 
     background-color: red;
     opacity: 0.5;
