Adds in a grid-based window view (Issue 121) Adds in the ability to sort windows by the number of tabs (Issue 123)

--- a/lib/UI Helper.css
+++ b/lib/UI Helper.css
@@ -50,6 +50,10 @@ button.UI-link {
     white-space: nowrap;
 }
 
+.UI-contextMenu-space {
+    /*border-top: 1px solid transparent;*/
+    margin: 2px 0px;
+}
 .UI-contextMenu-separator {
     border: none;
     border-top: 1px solid #dcdcdc; /*! #acacac */
