--- a/views/horizontal.css
+++ b/views/horizontal.css
@@ -11,8 +11,14 @@ body {
 .window {
     min-width: 89px; /** 105px */
     max-width: 400px;
+    padding-right: 32px;
+}
+.window[data-selected] {
+    position: relative;
+    z-index: 2;
 }
 .window[data-last] {
+    /*padding-right: 0px;*/
     padding-right: 18px;
     min-width: 400px;
 }
