--- a/window.css
+++ b/window.css
@@ -76,6 +76,8 @@ body {
     left: 0px;
     top: 0px;
 
+    background: inherit;
+
     width: 100%;
     height: 69px;
     padding: 15px 27px 0px 25px; /** 15px 27px 22px 65px */
@@ -130,16 +132,19 @@ body {
     position: relative;
 
     width: 241px; /*! 200px 225px */
-    margin-top: 4px;
+    margin-top: 3px;
 
     white-space: nowrap;
 }
 #search-box > input {
+    -webkit-box-shadow: inset 1px 1px 5px gainsboro;
+
     width: 100%;
-    padding: 0px 2px;
+    padding: 1px 2px;
     margin: 0px;
 
-    border-color: #e1e1e1;
+    border-color: #999 #CCC #CCC; /** #e1e1e1 */
+    border-width: 1px;
     border-radius: 2px;
 }
 #search-past {
@@ -235,18 +240,17 @@ input[data-special], .search-past-item[data-special] {
     height: 100%;
     padding: 70px 0px 30px 18px; /** 70px 0px 30px 58px */
 }
+
+/*.window-wrapper {
+    display: inline-block;
+}*/
 .window {
     -webkit-box-flex: 1;
 
     display: -webkit-box;
     -webkit-box-orient: vertical;
 
-    padding-right: 32px;
     outline: none;
-}
-.window[data-selected] {
-    position: relative;
-    z-index: 2;
 }
 
 .tab-icon-border, .tab-list-border {
