--- a/window.css
+++ b/window.css
@@ -62,9 +62,40 @@ body {
 
 #placeholder {
     display: block !important;
-    margin: 3px 0px;
-    border: 1px inset gray;
+    position: relative;
+    z-index: 9001;
+
+    width: 100%;
+    height: 7px;
+
+/*    margin: -3px 0px;*/
+    padding-right: 2px;
+    margin-top: -4px;
+    margin-bottom: -3px;
+    margin-left: -1px;
+
+    /*background-color: white;*/
+/*    background-color: black;*/
+/*    border-top: 1px solid black;*/
+    background-image: url(/images/context-menu-arrow.png),
+                      url(/images/context-menu-arrow-left.png);
+
+    background-repeat: no-repeat,
+                       no-repeat;
+
+    background-position: 0 0,
+                         100% 0;
+/*    background-position: 0px -4px;*/
+    /*margin: -1px 0px;*/
+    /*margin: 3px 0px;*/
+    /*border: 1px inset gray;*/
 }
+/*#placeholder:before {
+    display: block !important;
+    background-image: url(/images/context-menu-arrow.png);
+    background-repeat: no-repeat;
+    background-position: 100% 0;
+}*/
 
 #toolbar {
     -webkit-box-sizing: border-box;
@@ -461,9 +492,11 @@ input[data-special], .search-past-item[data-special] {
     background-color: oldlace;
     border: 1px solid goldenrod;
 }
-/*!.tab[data-dropindent] {
-    outline: 1px solid black;
-}*/
+.tab[data-dropindent] {
+    border: 1px solid black;
+/*    margin: -1px;*/
+/*    outline: 1px solid black;*/
+}
 .tab[data-selected] {
     /*! background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(124, 252, 0, 0.4)), to(rgba(124, 252, 0, 0.5)));*/
     /*! background-image: -webkit-gradient(linear, 0% 0%, 0% 100%,
