--- a/window.css
+++ b/window.css
@@ -493,7 +493,7 @@ input[data-special], .search-past-item[data-special] {
     border: 1px solid goldenrod;
 }
 .tab[data-dropindent] {
-    border: 1px solid black;
+    border: 1px solid black/* !important*/;
 /*    margin: -1px;*/
 /*    outline: 1px solid black;*/
 }
