--- a/lib/UI Helper.css
+++ b/lib/UI Helper.css
@@ -37,9 +37,13 @@ button.UI-link {
 
 .UI-contextMenu {
     position: absolute;
+/*    top: 0px;
+    left: 0px;*/
+/*    z-index: 9002;*/
+
     top: 100%;
     margin-left: -2px;
-    margin-top: -5px;
+    margin-top: -2px;
 
     font: menu;
     font-size: 13px;
