--- a/lib/UI Helper.css
+++ b/lib/UI Helper.css
@@ -65,6 +65,9 @@ button.UI-link {
 
 .UI-contextMenu-item {
     cursor: pointer;
+
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .UI-contextMenu-item,
@@ -111,6 +114,8 @@ button.UI-link {
     z-index: 2;
     left: 100%;
     top: 0px;
+/*
+    max-width: 100%;*/
 
     padding: 12px;
     padding-right: 20px;
