--- a/css/window.css
+++ b/css/window.css
@@ -68,15 +68,11 @@ body {
     width: 100%;
     height: 7px;
 
-/*    margin: -3px 0px;*/
     padding-right: 2px;
     margin-top: -4px;
     margin-bottom: -3px;
     margin-left: -1px;
 
-    /*background-color: white;*/
-/*    background-color: black;*/
-/*    border-top: 1px solid black;*/
     background-image: url(/images/context-menu-arrow.png),
                       url(/images/context-menu-arrow-left.png);
 
@@ -85,17 +81,7 @@ body {
 
     background-position: 0 0,
                          100% 0;
-/*    background-position: 0px -4px;*/
-    /*margin: -1px 0px;*/
-    /*margin: 3px 0px;*/
-    /*border: 1px inset gray;*/
 }
-/*#placeholder:before {
-    display: block !important;
-    background-image: url(/images/context-menu-arrow.png);
-    background-repeat: no-repeat;
-    background-position: 100% 0;
-}*/
 
 #toolbar {
     -webkit-box-sizing: border-box;
@@ -304,7 +290,6 @@ input[data-special], .search-past-item[data-special] {
     -webkit-box-orient: vertical;
 
     position: relative;
-    /*z-index: -2;*/
 
     margin-top: -10px;
 
@@ -325,10 +310,6 @@ input[data-special], .search-past-item[data-special] {
 
 .tab-icon-border {
     -webkit-box-sizing: border-box;
-/*
-    position: relative;*/
-    /*top: 0px;*/
-    /*z-index: -1;*/
 
     width: 105px;
 
@@ -341,10 +322,8 @@ input[data-special], .search-past-item[data-special] {
 }
 .tab-icon-container {
     position: relative;
-    /*top: -1px;*/
     z-index: 1;
 
-    /*width: 105px;*/
     height: 22px;
 
     background-color: inherit;
@@ -356,8 +335,6 @@ input[data-special], .search-past-item[data-special] {
     -webkit-box-align: start;
 
     padding: 1px 2px;
-    /*margin-left: 8px;
-    margin-top: -22px;*/
 
     background-color: white;
 
@@ -511,7 +488,7 @@ input[data-special], .search-past-item[data-special] {
     border: 1px solid goldenrod;
 }
 .tab[data-dropindent] {
-    border: 1px solid black/* !important*/;
+    border: 1px solid black;
 }
 .tab[data-selected] {
     /*! background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(124, 252, 0, 0.4)), to(rgba(124, 252, 0, 0.5)));*/
