--- a/css/window.css
+++ b/css/window.css
@@ -330,6 +330,9 @@ input[data-special], .search-past-item[data-special] {
 }
 .tab-list {
     -webkit-box-flex: 1;
+/*
+    display: -webkit-box;
+    -webkit-box-orient: vertical;*/
 
     padding: 2px;
 
