--- a/lib/UI Helper.css
+++ b/lib/UI Helper.css
@@ -103,6 +103,11 @@ button.UI-link {
     margin-right: -4px;
 }
 
+/*!
+.UI-contextMenu-submenu-padding,
+.UI-contextMenu-submenu-mask {
+    outline: 1px solid red;
+}*/
 
 .UI-contextMenu-submenu-padding {
     -webkit-box-sizing: border-box;
@@ -112,15 +117,14 @@ button.UI-link {
     left: 100%;
     top: 0px;
 
-    padding: 12px;
-    padding-right: 20px;
-    margin-left: -13px;
-    margin-top: -16px;
+    padding: 14px;
+    margin-left: -15px;
+    margin-top: -18px;
 }
 .UI-contextMenu-submenu-padding[data-overflow-x] {
     left: auto;
     right: 100%;
-    margin-right: -21px;
+    margin-right: -15px;
 }
 
 .UI-contextMenu-submenu-mask {
@@ -132,9 +136,11 @@ button.UI-link {
     width: 100%;
     height: 100%;
 
-    padding: 12px;
-    margin-top: -12px;
-    margin-left: -12px;
+    padding: 0px;
+/*!
+    padding: 7px;
+    margin-top: -7px;
+    margin-left: -7px;*/
 }
 
 
