--- a/css/window.css
+++ b/css/window.css
@@ -153,7 +153,7 @@ body {
 
     white-space: nowrap;
 }
-#search-input, #search-autocomplete-input {
+#search-input/*, #search-autocomplete-input*/ {
     -webkit-appearance: textfield;
 
     width: 100%;
@@ -172,7 +172,7 @@ body {
     border-color: #999 #CCC #CCC; /** #e1e1e1 */
     border-radius: 2px;
 }
-#search-autocomplete-mask, #search-autocomplete-input {
+/*#search-autocomplete-mask, #search-autocomplete-input {
     position: absolute;
 
     left: 0px;
@@ -187,21 +187,26 @@ body {
 #search-autocomplete-input {
     color: dimgray;
     border-color: transparent;
-}
+}*/
 #search-past {
     -webkit-box-shadow: dimgray 0px 2px 3px;
 
     margin: 0px 1px 0px 1px;
 
     background-color: white;
-    border: 1px solid dimgray;
+    outline: 1px solid dimgray;
+    /*border-top: none;*/
 
     overflow-x: hidden;
     overflow-y: auto;
 }
 .search-past-item {
     display: -webkit-box;
-    padding: 1px 6px 3px;
+    padding: 2px 6px 2px;
+    margin: 0px -1px;
+/*    margin-top: -1px;*/
+/*    margin-bottom: 0px;*/
+    border: 1px solid transparent;
 }
 input[data-special], .search-past-item[data-special] {
     color: darkred;
@@ -209,8 +214,10 @@ input[data-special], .search-past-item[data-special] {
 .search-past-item[data-selected] {
     color: white;
 
+/*    background-color: #5fa0f0;*/
     background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#99c5fb), to(#5fa0f0));
-    outline: 1px solid #375C89;
+    border: 1px solid #375C89;
+    outline: none;
 }
 .search-past-item-text {
     -webkit-box-flex: 1;
@@ -220,17 +227,20 @@ input[data-special], .search-past-item[data-special] {
 }
 .past-queries-close {
     display: none;
+/*
+    outline: 1px solid red;*/
 
     padding: 4px;
     margin: -1px;
-    margin-bottom: -4px;
+    margin-top: -2px;
+    margin-bottom: -3px;
     margin-right: -6px;
 
     vertical-align: top;
 
     cursor: pointer;
 }
-.search-past-item[data-selected] > .past-queries-close {
+.search-past-item[data-selected]:hover > .past-queries-close {
     display: inline;
 }
 
